--- a/test/fixtures/zombies.yml
+++ b/test/fixtures/zombies.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  status: MyString
-  zombie_id: 
+  name: MyString
+  grave: MyString
 
 two:
-  status: MyString
-  zombie_id: 
+  name: MyString
+  grave: MyString
